@@ -87,7 +87,20 @@ class TrytonConfigParser(ConfigParser.RawConfigParser):
         # AKE: sentry config from env vars
         self.add_section('sentry')
         self.set('sentry', 'dsn', os.environ.get('TRYTOND_SENTRY_DSN', None))
+        self.update_environ()
         self.update_etc()
+
+    def update_environ(self):
+        for key, value in os.environ.items():
+            if not key.startswith('TRYTOND_'):
+                continue
+            try:
+                section, option = key[len('TRYTOND_'):].lower().split('__', 1)
+            except ValueError:
+                continue
+            if not self.has_section(section):
+                self.add_section(section)
+            self.set(section, option, value)
 
     def update_etc(self, configfile=os.environ.get('TRYTOND_CONFIG')):
         if isinstance(configfile, basestring):
